--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <link rel="STYLESHEET" type="text/css" href="style.css" media="all,handheld"/>
 </head><body><div class="line"><font size="5px"> Mp4Moviez </font><br/><small>Best Quality</small></div>
 
-<center><div class="form">
-<a href=" http://7starhd.icgti.org / "><font color="green">7starHD</font></a> - <a href=" https://bolly4u.icgti.org/ "><font color="green">Movies Download </font></a>
+<center><div class="form"><a href=" http://7starhd.icgti.org / "><font color="green">7starHD</font></a> - <a href=" https://bolly4u.icgti.org/ "><font color="green">Movies Download </font></a>
 </div></center>
 
 
