--- a/index.html
+++ b/index.html
@@ -23,26 +23,54 @@
 
 
 <div class="line">Hindi Mobil Movie Download</div>
+<div class="f" title="Tamil 2021 Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw">Tamil 2021 Movies</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png"/> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fcar-insurance-quotes-online%2F&sa=D&sntz=1&usg=AFQjCNHXApq6mpIK_BAWqNWTC18KboWMyg ">Bollywood movie 2021</a></div> 
+<div class="f" title="Tamil 2020 Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fcar-insurance-quotes-online%2F&sa=D&sntz=1&usg=AFQjCNHXApq6mpIK_BAWqNWTC18KboWMyg">Tamil 2020 Movies</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw ">Hollywood Movie 2021</a></div>
+<div class="f" title="Tamil 2019 Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw">Tamil 2019 Movies</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fhealth-insurance%2F&sa=D&sntz=1&usg=AFQjCNFaAxAWCH34TY2ZqDg7IQQWzddiTQ ">Tamil HD Videos</a></div> 
+<div class="f" title="Tamil 2018 Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fcar-insurance-quotes-online%2F&sa=D&sntz=1&usg=AFQjCNHXApq6mpIK_BAWqNWTC18KboWMyg">Tamil 2018 Movies</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw ">Tamil HD Dubbed 2021</a></div>
+<div class="f" title="Tamil 2017 Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw">Tamil 2017 Movies</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Flawyer%2Fasbestos-lawsuit-lawyers-mesothelioma-attorney-near-me%2F&sa=D&sntz=1&usg=AFQjCNG7Sku1heYCug-5xfqps0jv4cLzHg "> Tamil Dubbed Movies </a></div> 
+<div class="f" title="Tamil Movies Collection"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fhosting%2Fionos-hosting%2F&sa=D&sntz=1&usg=AFQjCNGQJG3UdHq0YQn7JnAF5sOg4i0Eww">Tamil Movies Collection</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fauto-insurance%2F&sa=D&sntz=1&usg=AFQjCNFctmNab3w29Dvk2ObhS-8fhxri6g ">Telugu Movie Download </a></div> 
+<div class="f" title="Tamil Single Part Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw">Tamil Movies [Single Part]</a></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fhosting%2Fionos-hosting%2F&sa=D&sntz=1&usg=AFQjCNGQJG3UdHq0YQn7JnAF5sOg4i0Eww ">Tamil New Updates [Daily]</a></div> 
+<div class="f" title="Tamil HD Mobile Movies"> <img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fhosting%2Fionos-hosting%2F&sa=D&sntz=1&usg=AFQjCNGQJG3UdHq0YQn7JnAF5sOg4i0Eww">Tamil HD Mobile Movies</a></div>
 
-<div class="line">More Movie Downloads</div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fauto-insurance%2F&sa=D&sntz=1&usg=AFQjCNFctmNab3w29Dvk2ObhS-8fhxri6g" >Tamil Movies Update</a> <font color="red">[Daily]</font></div>
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png"/> <a href=" https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Flawyer%2Fasbestos-lawsuit-lawyers-mesothelioma-attorney-near-me%2F&sa=D&sntz=1&usg=AFQjCNG7Sku1heYCug-5xfqps0jv4cLzHg ">Netfilx Movies Download</a></div> 
 
-<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fjavascript%2Fbuild-a-bank-loan-mortgage-interest-rates-calculator-in-browser-using-javascript-css3-and-html5-complete-project-for-learner%2F&sa=D&sntz=1&usg=AFQjCNF4xTdtbWUndVOdjqj9aY88XS95nQ">Recent Movies Download</a></div> 
+<div class="line">HD Tamil Dubbed Movies</div>
+
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw" >Tamil A-Z Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fauto-insurance%2F&sa=D&sntz=1&usg=AFQjCNFctmNab3w29Dvk2ObhS-8fhxri6g" >Tamil 2019 Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzaw" >Tamil 2018 Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fauto-insurance%2F&sa=D&sntz=1&usg=AFQjCNFctmNab3w29Dvk2ObhS-8fhxri6g" >Tamil 2017 Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fhome-insurance%2F&sa=D&sntz=1&usg=AFQjCNGrzP_ZR122aRRqVWUtoGqxuFAXGg" >Tamil 2016 Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Flife-insurance%2F&sa=D&sntz=1&usg=AFQjCNGgDv_xssL3f8og5Q7tKyqidwxzawvv" >Tamil Dubbed Collections</a> <font color="red">[All]</font></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fhealth-insurance%2F&sa=D&sntz=1&usg=AFQjCNFaAxAWCH34TY2ZqDg7IQQWzddiTQ " >Tamil Yearly Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fhome-insurance%2F&sa=D&sntz=1&usg=AFQjCNGrzP_ZR122aRRqVWUtoGqxuFAXGg" >Tamil Genres Dubbed Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fhealth-insurance%2F&sa=D&sntz=1&usg=AFQjCNFaAxAWCH34TY2ZqDg7IQQWzddiTQ" >Tamil HD Dubbed Movies</a> <font color="red">[Daily Updates]</font></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Ftravel-insurance%2F&sa=D&sntz=1&usg=AFQjCNH2qIAhihBVdwZB9nySh2eWwVHtpw" >Hollywood Movies in (English)</a></div>
+<div class="line">Download Dubbed Movies</div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fcar-insurance-quotes-online%2F&sa=D&sntz=1&usg=AFQjCNHXApq6mpIK_BAWqNWTC18KboWMyg" >Hollywood Movies </a></div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Finsurance%2Fcar-insurance-quotes-online%2F&sa=D&sntz=1&usg=AFQjCNHXApq6mpIK_BAWqNWTC18KboWMyg" >Bollywood Movies</a></div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Flawyer%2Fasbestos-lawsuit-lawyers-mesothelioma-attorney-near-me%2F&sa=D&sntz=1&usg=AFQjCNG7Sku1heYCug-5xfqps0jv4cLzHg" >Netflix Movies</a></div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw" >IMDB Movies</a></div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Flawyer%2Fasbestos-lawsuit-lawyers-mesothelioma-attorney-near-me%2F&sa=D&sntz=1&usg=AFQjCNG7Sku1heYCug-5xfqps0jv4cLzHg" >HBO Max Movies</a></div>
+<div class="f"><img src="https://user-images.githubusercontent.com/91617831/135661524-3db2b90a-f12d-4d82-a0c2-7378382760ad.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw" >Amazon Prime Movies</a></div>
 
 <div class="aut">Page Tags :</div>
 
