--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <title> Mp4Moviez 2021 – Download New Mp4 Movies Hollywood, bollywood Hindi Dubbed
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content=" mp4moviez 2021Dubbed movies download mp4moviez2, mp4moviez download mp4moviez Marathi, www mp4moviez in, mp4moviez hollywood hindi dubbed, " />
+<meta name="description" content=" mp4moviez 2022 Dubbed movies download mp4moviez2, mp4moviez download mp4moviez Marathi, www mp4moviez in, mp4moviez hollywood hindi dubbed, " />
 <meta name="keywords" content=" mp4moviez web series Tamil telugu Hollywood bollywood full movie download mp4moviez.com today, link mp4moviez 2021 guru one tech download " />
-<meta name="classification" content=" Mp4Moviez 2021 – Download New Mp4 Movies Hollywood, bollywood Hindi Dubbed " />
+<meta name="classification" content=" Mp4Moviez 2022 – Download New Mp4 Movies Hollywood, bollywood Hindi Dubbed " />
 <meta name="distribution" content="Global" />
 <meta name="rating" content="General" />
 <meta name="robots" content="index, follow" />
@@ -19,7 +19,7 @@
 <link rel="STYLESHEET" type="text/css" href="style.css" media="all,handheld"/>
 </head><body><div class="line"><font size="5px"> Mp4Moviez </font><br/><small>Best Quality</small></div>
 
-<center><div class="form"><a href="http://7starhd.icgti.org/"><font color="green">7starHD</font></a>|<a href=" https://bolly4u.icgti.org/"><font color="green">Movies Download </font></a></div></center>
+<center><div class="form"><a href="http://Isaimini-2022.freejobnaukri.info/"><font color="green">Isaimini 2022</font></a>|<a href=" https://Movierulz.freejobnaukri.info/"><font color="green">Movierulz ple</font></a></div></center>
 
 
 <div class="line">Hindi Mobil Movie Download</div>
